# conn-adapters

./: .gitignore  ADAPTER_INTERFACE.md  README.md  pyproject.toml
adapters/: __init__.py  interface.py
adapters/gdrive/: __init__.py  base.py  config.py  gdrive.py
tests/: test_imports.py
