[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conn-adapters"
version = "0.1.0"
description = "Source adapter implementations for connector platform"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10.6"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*"]
